--- a/time-tracking-dashboard-main/index.html
+++ b/time-tracking-dashboard-main/index.html
@@ -77,7 +77,7 @@
     </div>
     <div class="card card-self-care">
       <div class="card-content">
-        <h2 class="activities">Content</h2>
+        <h2 class="activities">Self Care</h2>
      <div class="activities-details">
       <h1 class="activities-time">2hrs</h1>
       <p class="activities-period">Last week - 2hrs</p>
